# rockin-datamodel

./: .gitignore  Breakdown.md  LICENSE  README.md  __init__.py  example.py  manage.py  pyproject.toml  setup.py
crudapp/: forms.py  models.py  tests.py  views.py
djangoRockSamples/: asgi.py  settings.py  urls.py  wsgi.py
models/: core.py  core_chip.py  cuttings.py  micro_core.py  rockin_base.py  well.py
pydantic_models/: __init__.py  core.py  core_chip.py  cuttings.py  micro_core.py  notes.md  rockin_base.py  well.py
rockin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
