[build-system]
requires = [
    "setuptools>=58.0.1",
    "wheel>=0.37.0",
    "toml>=0.10.2"
]
build-backend = "setuptools.build_meta"


[project]
name = "rockin-data-model"
version = "0.1.0"
description = "A data model that describes cores extracted from a well drilling as data points"

dependencies = [
    'pydantic',
]


[project.optional-dependencies]
dev = [
    'coverage',
    'pytest',
    'pytest-cov',
    'pylint',
]
